# tensorflow_cpp_wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  info_about_tensorflow.md
example/: main.cpp
